[FIX/#114] 목표 거래내역 API 동기화 로직 제거 (#117)
## 🔗 Related Issue
<!-- 이슈 번호를 작성하여 종료시켜주세요 -->
- Closes #114 
- 
## 📝 Summary

### 목표 달성 로직 변경
- 목표 달성 기준을 현재 잔액 >= 목표 금액으로 변경했습니다.
- Goal 엔티티에서 startAmount 필드를 삭제했습니다.

### 동기화 로직 제거
- 목표 관련 모든 서비스에서 실시간 잔액 동기화 로직(기존 AssetBalanceService 호출하던 거)을 제거했습니다.
- 모든 잔액 조회는 DB에 저장된 BankAccount의 balanceAmount를 직접 사용합니다.

### 코드 단순화 및 리팩토링:
- 기존 동기화 역할을 하던 GoalLedgerFacade를 삭제하고, GoalController가
GoalLedgerQueryService를 직접 호출하도록 변경했습니다.
- GoalConverter 및 관련 DTO에서 startAmount 관련 로직을 제거하고 필드명을 currentBalance로
통일했습니다.


## 🔄 Changes
<!-- 구체적으로 어떤 파일/로직이 변경되었는지 체크해주세요 -->
- [x] API 변경 (추가/수정)
- [ ] 데이터 및 도메인 변경 (DB, 비즈니스 로직)
- [ ] 설정 또는 인프라 관련 변경
- [x] 리팩토링

## 💬 Questions & Review Points
<!-- 리뷰어가 특별히 봐주었으면 하는 부분이 있다면 작성해주세요 -->

## 📸 API Test Results (Swagger)
<!-- API 테스트 스크린샷 첨부 -->

## ✅ Checklist
- [x] API 테스트 완료
- [ ] 테스트 결과 사진 첨부
- [x] 빌드 성공 확인 (./gradlew build)